# VoxelEngine

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
Assets/: Core.wren  main.wren
Assets/Mods/default/: FarmHouse.vox  ModernHouse.pf  ModernHouse.vox  Movement.wren  mod.wren
Assets/Mods/default/FarmHouse/: 1.v  11.v  12.v  13.v  14.v  15.v  19.v  2.v  26.v  27.v  3.v  34.v  37.v  38.v  4.v  41.v  44.v  53.v  54.v  58.v  59.v  62.v  68.v  70.v  8.v  9.v  FarmHouse.p
Assets/Mods/default/ModernHouse/: 3.v  4.v  6.v  72.v
Assets/Mods/default/Player/: 10.v  11.v  3.v  4.v
Assets/Mods/default/Shaders/: ColorWorld.frag.spv  Compose.frag.spv  Compose.vert.spv  ComposeTAA.frag.spv  ComposeTAA.vert.spv  CubeMapFace.frag.spv  CubeMapFace.vert.spv  GeometrySky.frag.spv  GeometrySky.vert.spv  GeometryVoxel.frag.spv  GeometryVoxel.vert.spv  LightAmbient.frag.spv  LightAmbient.vert.spv  LightBloomStep.frag.spv  LightBlur.frag.spv  LightBlur.vert.spv  LightPoint.frag.spv  LightPoint.vert.spv  LightReflection.frag.spv  LightReflection.vert.spv  LightSpot.frag.spv  LightSpot.vert.spv  LightTAA.frag.spv  OutlineVoxel.frag.spv  OutlineVoxel.vert.spv  Present.frag.spv
Sources/: Entry.cpp
Sources/Asset/: Assets.cpp  Assets.h  ImageAsset.cpp  ImageAsset.h  PalleteAsset.h  PrefabAsset.cpp  PrefabAsset.h  ScriptAsset.h  SkyBoxAsset.cpp  SkyBoxAsset.h  VoxAsset.cpp  VoxAsset.h
Sources/Core/: Core.h  DeltaTime.h  Engine.cpp  Engine.h  Input.cpp  Input.h  LayerStack.cpp  LayerStack.h  Module.h  Window.cpp  Window.h
Sources/Editor/: EditorCamera.cpp  EditorCamera.h  EditorCommand.h  EditorLayer.cpp  EditorLayer.h  EditorSelection.cpp  EditorSelection.h
Sources/Editor/EUI/: EUI.cpp  EUI.h
Sources/Editor/Importer/: AssetImporter.h  VoxImporter.cpp  VoxImporter.h
Sources/Editor/Util/: AutoAssetImporter.cpp  AutoAssetImporter.h
Sources/Editor/Window/: AssetsWindow.cpp  AssetsWindow.h  EditorWindow.cpp  EditorWindow.h  HierarchyWindow.cpp  HierarchyWindow.h  PropertiesWindow.cpp  PropertiesWindow.h  ViewportWindow.cpp  ViewportWindow.h
Sources/Event/: Event.h
Sources/Graphics/: BLASManager.cpp  BLASManager.h  Canvas.cpp  Canvas.h  Graphics.cpp  Graphics.h  Pipelines.h  Util.h
Sources/Graphics/Pipelines/: ColorWorldPipeline.h  ComposePass.h  ComposePipeline.h  ComposeTAAPipeline.h  CubeMapFace.h  DenoiserPass.h  GBufferPass.h  GeometrySkyPipeline.h  GeometryVoxelPipeline.h  LightAmbientPipeline.h  LightBloomStep.h  LightBlur.h  LightPointPipeline.h  LightReflectionPipeline.h  LightSpotPipeline.h  LightTAAPipeline.h  OutlineVoxelPipeline.h  PathTracePass.h  PresentPipeline.h  RayTracePass.h
Sources/Graphics/Renderer/: BVH.h  ImGuiRenderer.cpp  ImGuiRenderer.h  View.h  WorldRenderer.cpp  WorldRenderer.h
Sources/IO/: FileExplorer.cpp  FileExplorer.h  Log.h  Stream.h  SystemIO.h  TTFile.h
Sources/Input/: InputHandler.h
Sources/Job/: Jobs.cpp  Jobs.h
Sources/Layer/: GameLayer.cpp  GameLayer.h  Layer.h
Sources/Mod/: Mod.h  ModLoader.cpp  ModLoader.h
Sources/Profiler/: Profiler.cpp  Profiler.h
Sources/Script/: ScriptLib_Assets.cpp  ScriptLib_Assets.h  ScriptLib_Core.cpp  ScriptLib_Core.h  ScriptVM.cpp  ScriptVM.h
Sources/Shaders/: ColorWorld.frag  Compose.comp  Compose.frag  Compose.vert  ComposeTAA.frag  ComposeTAA.vert  CubeMapFace.frag  CubeMapFace.vert  DITrace.comp  DenoiserAtrous.comp  DenoiserDisc.comp  DenoiserSpecular.comp  DenoiserTemporal.comp  GBuffer.comp  GeometrySky.frag  GeometrySky.vert  GeometryVoxel.frag  GeometryVoxel.vert  Glyph.frag  Glyph.vert  IRCacheNormalize.comp  IRCacheTrace.comp  LightAmbient.frag  LightAmbient.vert  LightBloomStep.frag  LightBlur.frag  LightPoint.frag  LightPoint.vert  LightReflection.frag  LightReflection.vert  LightSpot.frag  LightSpot.vert  LightTAA.frag  LightTAA.vert  OutlineVoxel.frag  OutlineVoxel.vert  PathTrace.comp  Present.frag  Present.vert  RadianceProbesTrace.comp  (+10 more)
Sources/Shaders/lib/: BRDF.frag  Common.frag  Denoiser.frag  Light.frag  Math.frag  PBR.frag  PathTrace.frag  Probe.frag  Reservoir.frag  Shared.inl  View.frag  evk.frag
Sources/Util/: CallbackQueue.h  FileUtil.h  MathUtil.h  Noise.cpp  Noise.h  PreciseTimer.h  Serializer.h
Sources/Vox/: PalleteCache.cpp  PalleteCache.h
Sources/World/: Components.h  EntitySlot.cpp  EntitySlot.h  World.cpp  World.h
Sources/World/Systems/: CameraSystem.h  CharacterSystem.cpp  CharacterSystem.h  IKSystem.cpp  IKSystem.h  PhysicsSystem.cpp  PhysicsSystem.h  ScriptSystem.cpp  ScriptSystem.h  ShadowVoxSystem.cpp  ShadowVoxSystem.h  System.h  TransformSystem.cpp  TransformSystem.h
